Red pen edits to end of first printed half.

--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -425,7 +425,13 @@ One might consider the `Second Earth' concept to be the ultimate realisation of 
 
 Although the use cases for parallel reality systems that feature completely unrelated real and virtual environments (including where the virtual environment is entirely fictitious) may seem limited in terms of possible benefits to understanding or knowledge gain when comparing and contrasting the environments, an educated approach to implementing transitions between these environments, that takes similar considerations as the platforms developed in this thesis, does conceivably have purpose. In the opening quote to this chapter, taken from Neal Stephenson's cyberpunk novel \textit{Snow Crash}, the protagonist enquires about the location of another character, both in the real world and in the `Metaverse' (analogous to a virtual world akin to Second Life, accessed via a HMD, comprising an entirely synthetic virtual world whose locations have no counterparts in the real world). Her response is that \textit{``In  the Metaverse, I'm on a plusbound monorail train. Just passed by Port 35.''} whilst in reality she is at a \textit{``Public terminal across the street from a Reverend Wayne's"}.
 
-There is no spatial equivalence in this scenario between the real environment and the virtual environment - they are not the same `place', however the protagonist still wishes to be able to experience both by transitioning between them, paying attention to one while travelling through the other. While this situation is currently science fiction, recent developments in mobile VR platforms such as Samsumg Gear VR\footnote{\url{http://www.samsung.com/global/microsite/gearvr/}} hint that we are not so far away from a time in which members of the general public will wish to multiplex their real environment with a virtual one in this fashion while in public, in the same way that people commonly engage in computer-mediated communication (CMC) via their smartphones at the same time as walking through real environments and conversing with the people in them, creating instances of polysocial reality. If a parallel reality system were to allow interaction between its user and other virtual environment users who are not part of the parallel reality scenario, it is conceivable that polysocial instances would arise, with PR users socially engaging both with people in their immediate real environment and with people in their immediate virtual environment, even where the latter are not present in the RW environment. This situation would present \textit{``\ldots\ instances of synchronous polysocial reality, multiple presence \ldots\ being activated in different environments.''}\footnote{Personal correspondence with Sally Applin, polysocial reality author.}
+There is no spatial equivalence in this scenario between the real environment and the virtual environment - they are not the same `place', however the protagonist still wishes to be able to experience both by transitioning between them, paying attention to one while travelling through the other. Situations of publicly experienced both spatially equivalent and non-equivalent alternate realities are also rife in Vernor Vinge's \textit{Rainbows End};
+
+\begin{quote}
+	\textit{``Robert leaned back from the window and reached out to wider universes. Colored maps appeareed before his eyes. These were realities that were geographically far away, not overlaid upon San Diego at all \ldots\ Finally he got a window that promised `public local reality only.' ''}~\cite{Vinge2006}
+\end{quote}
+
+While these situations are currently science fiction, recent developments in mobile VR platforms such as Samsumg Gear VR\footnote{\url{http://www.samsung.com/global/microsite/gearvr/}} hint that we are not so far away from a time in which members of the general public will wish to multiplex their real environment with a virtual one in this fashion while in public, in the same way that people commonly engage in computer-mediated communication (CMC) via their smartphones at the same time as walking through real environments and conversing with the people in them, creating instances of polysocial reality. If a parallel reality system were to allow interaction between its user and other virtual environment users who are not part of the parallel reality scenario, it is conceivable that polysocial instances would arise, with PR users socially engaging both with people in their immediate real environment and with people in their immediate virtual environment, even where the latter are not present in the real environment. This situation would present \textit{``\ldots\ instances of synchronous polysocial reality, multiple presence \ldots\ being activated in different environments.''}\footnote{Personal correspondence with Sally Applin, polysocial reality author.}
 
 With the majority of players of popular Massively Multiplayer Online games (MMOs) wishing they could spend more time playing, over a fifth even wanting to spend all of their time in game~\cite{Castronova2006}, and with social roles and the community aspect constituting key aspects of these game's popularity~\cite{Castronova2006, Bartle2004}, informing the implementation of transitions between real and virtual in such systems with the findings of the experiments in this thesis into spatially equivalent parallel reality systems promises to be beneficial to the further development of 3D social CMC in a wider sense.
 
