Red pen edits to 5.3.4.

--- a/thesis.tex
+++ b/thesis.tex
@@ -228,7 +228,7 @@
 % ======= ======= ======= ======= ======= ======= =======
 
 %\chapter{Mirrorshades - Evaluation}
-\chapter{Evaluation - Merit of PR}
+\chapter{The Merit of Parallel Reality}
 \graphicspath{ {06_mirrorshades_studies_results/images/} }
 \input{06_mirrorshades_studies_results/mirrorshades_studies_results.tex}
 
