Red pen edits to end of chapter 5.

--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -191,18 +191,18 @@ With regards to movement in the parallel reality scenario, the accuracy and espe
 
 \subsection{Log Data}
 
-For the traditional VR scenario log data were recorded while each participant was engaging with the VR chapel in a seated position and using the Xbox controller to navigate the VR environment. For the parallel reality scenario log data were recorded throughout the whole scenario, such that data are available for both the periods in which participants were observing the RW chapel via the DK1 and cameras in addition to the periods in which participants were observing the VR chapel. As such, several comparisons can be made between these sets of data in addition to considering the data as a whole. Within the parallel reality scenario, comparisons can be made between the periods that participants were observing RW and the periods that participants were observing VR. Between the traditional VR scenario and the parallel reality scenario, comparisons can be made between the VR section of the traditional VR scenario and the periods that participants were observing VR in the parallel reality scenario. Log data were not captured for participant 2, nor were they captured for the traditional VR scenario for participant 5.
+For the seated VR scenario log data were recorded while each participant was engaging with the VR chapel in the seated position and using the Xbox controller to navigate the VR environment. For the parallel reality scenario log data were recorded throughout the whole scenario, such that data are available for both the periods in which they were observing the RW chapel via the DK1 and cameras in addition to the periods in which participants were observing the VR chapel. As such, several comparisons can be made between these sets of data in addition to considering the data as a whole. Within the parallel reality scenario, comparisons can be made between the periods that participants were observing RW and the periods that they were observing VR. Between the seated VR scenario and the parallel reality scenario, comparisons can be made between the VR section of the seated VR scenario and the periods that participants were observing VR in the parallel reality scenario. Log data were not captured for participant 2, nor were they captured for the seated VR scenario for participant 5.
 
 %It was expected that the cumbersome nature of the parallel reality scenario in terms of the hardware that needed to be carried by the participant and the reduced quality of viewing the RW environment via the cameras would have a noticeable restrictive effect upon participants' movement (both in terms of their position and the orientation of their head) in the parallel reality scenario compared to the VR section of the traditional VR scenario, which would be evident from these log data.
 
 \subsubsection{Comparing traditional and parallel reality scenarios}
 
-When looking at either scenario's data (the VR section of the traditional VR scenario and both RW and VR periods of the parallel reality scenario) it is immediately evident that participants looked to their sides and turned their heads horizontally (yaw) far more than they looked above and beneath themselves by tilting their heads vertically (pitch). This relationship is shown in figures \ref{1_pitch_yaw_2up.png}, \ref{4_pitch_yaw_2up.png} and \ref{6_pitch_yaw_2up.png}, which show pitch and yaw plotted against time for both the traditional VR scenario and the parallel reality scenario, for participants 1, 4 and 6 respectively. With the traditional VR scenario on the left of each pair of plots and the parallel reality scenario on the right, the displacement of the blue line representing yaw is substantially greater in both than the displacement of the red line representing yaw.
+When looking at either scenario's data (the VR section of the seated VR scenario and both RW and VR periods of the parallel reality scenario) it is immediately evident that participants looked to their sides and turned their heads horizontally (yaw) far more than they looked above and beneath themselves by tilting their heads vertically (pitch). This relationship is shown in figures \ref{1_pitch_yaw_2up.png}, \ref{4_pitch_yaw_2up.png} and \ref{6_pitch_yaw_2up.png}, which show pitch and yaw plotted against time for both the seated VR scenario and the parallel reality scenario, for participants 1, 4 and 6 respectively. With the seated VR scenario on the left of each pair of plots and the parallel reality scenario on the right, the displacement of the blue line representing yaw is substantially greater in both than the displacement of the red line representing yaw.
 
 \begin{figure}
 	\begin{center}
 	\includegraphics[width=\textwidth]{1/1_pitch_yaw_2up.png}
-	\caption{Pitch and yaw against time for participant 1 in traditional VR and parallel reality scenarios.}
+	\caption{Pitch and yaw against time for participant 1 in seated VR and parallel reality scenarios.}
 	\label{1_pitch_yaw_2up.png}
 	\end{center}
 \end{figure}
@@ -210,7 +210,7 @@ When looking at either scenario's data (the VR section of the traditional VR sce
 \begin{figure}
 	\begin{center}
 	\includegraphics[width=\textwidth]{1/4_pitch_yaw_2up.png}
-	\caption{Pitch and yaw against time for participant 4 in traditional VR and parallel reality scenarios.}
+	\caption{Pitch and yaw against time for participant 4 in seated VR and parallel reality scenarios.}
 	\label{4_pitch_yaw_2up.png}
 	\end{center}
 \end{figure}
@@ -218,12 +218,12 @@ When looking at either scenario's data (the VR section of the traditional VR sce
 \begin{figure}
 	\begin{center}
 	\includegraphics[width=\textwidth]{1/6_pitch_yaw_2up.png}
-	\caption{Pitch and yaw against time for participant 6 in traditional VR and parallel reality scenarios.}
+	\caption{Pitch and yaw against time for participant 6 in seated VR and parallel reality scenarios.}
 	\label{6_pitch_yaw_2up.png}
 	\end{center}
 \end{figure}
 
-This relationship is reflected in calculations of the standard deviation in pitch and yaw across both scenarios, shown by table \ref{sdpitchyawtrad} for the traditional VR scenario and table \ref{sdpitchyawpr} for the parallel reality scenario. For every participant for which the data are available, the standard deviation in yaw is substantially higher than that in pitch. This relationship can largely be explained by the simple fact that there is more to observe in the chapel(s) at ground level than above eye level or down at the ground, however with the marked difference in the appearance of the chapel roof (stone in the VR reconstruction, wood in the RW chapel today) a smaller difference between pitch and yaw variance might have been expected for both scenarios.
+This relationship is reflected in calculations of the standard deviation in pitch and yaw across both scenarios, shown by table \ref{sdpitchyawtrad} for the seated VR scenario and table \ref{sdpitchyawpr} for the parallel reality scenario. For every participant for which the data are available, the standard deviation in yaw is substantially higher than that in pitch. This relationship can largely be explained by the simple fact that there is more to observe in the chapel(s) at ground level than above eye level or down at the ground, however with the marked difference in the appearance of the chapel roof (stone in the VR reconstruction, wood in the RW chapel today) a smaller difference between pitch and yaw variance might have been expected for both scenarios.
 
 \begin{table}
 \begin{center}
@@ -248,7 +248,7 @@ This relationship is reflected in calculations of the standard deviation in pitc
 
 \bottomrule
 \end{tabularx}
-\caption{Standard deviation in pitch and yaw for traditional VR scenario.}
+\caption{Standard deviation in pitch and yaw for seated VR scenario.}
 \label{sdpitchyawtrad}
 \end{center}
 \end{minipage}
@@ -287,11 +287,11 @@ This relationship is reflected in calculations of the standard deviation in pitc
 
 %=====================
 
-When studying plots of head pitch and yaw against time aligned with plots of distance moved against time, some participants display an aversion to large head movements while moving. Considering participant 1 (figure \ref{1_4up.png}), they seem to have been quite comfortable looking around a lot even while moving in the traditional VR scenario, while in the parallel reality scenario their large head movements are close to the periods in which their position was not changing as much\footnote{When looking at these plots it is important to appreciate that lag in the IndoorAtlas data results in a small lateral offset between the position data and the head orientation data, as the latter is unaffected by the lag in the correct reporting and `settling' of the former.}. When looking at the same data plotted for participant 3 however (figure \ref{3_4up.png}), it seems that they were reluctant to perform large head movements while moving in both scenarios, rather than just the parallel reality scenario.
+When studying plots of head pitch and yaw against time aligned with plots of distance moved against time, some participants display an aversion to large head movements while moving. Considering participant 1 (figure \ref{1_4up.png}), they seem to have been quite comfortable looking around a lot even while moving in the seated VR scenario, while in the parallel reality scenario their large head movements are close to the periods in which their position was not changing as much\footnote{When looking at these plots it is important to appreciate that lag in the IndoorAtlas data results in a small lateral offset between the position data and the head orientation data, as the latter is unaffected by the lag in the correct reporting and `settling' of the former.}. When looking at the same data plotted for participant 3 however (figure \ref{3_4up.png}), it seems that they were reluctant to perform large head movements while moving in both scenarios, rather than just the parallel reality scenario.
 
-Reluctance to changing head orientation when moving in the traditional VR scenario can be explained by something as simple as participant 1 having more experience with video games that present the user with a `first person' perspective in which movement and looking direction are controlled independently. For somebody familiar with this style of control, it is second nature to use one control to change their position whilst simultaneously using another control to change the direction in which they are looking, however for those unfamiliar or inexperienced with such scenarios it is common to observe alternation between movement and looking, something that the OVW group has observed in people interacting with virtual content at various demonstrations using keyboard and mouse, Xbox controller and other control methodologies. For first person shooter (FPS) video games, this simultaneous independent control of head and body is commonly achieved by using keyboard buttons to control body movement while using a mouse to control looking direction or the two separate control sticks of a controller such as an Xbox controller; with the traditional VR scenario, the Xbox controller provides control over movement while the head tracker in the DK1 provides control over looking direction by tracking head orientation.
+Reluctance to changing head orientation when moving in the seated VR scenario can possibly be explained by something as simple as participant 1 having more experience with video games that present the user with a `first person' perspective in which movement and looking direction are controlled independently. For somebody familiar with this style of control, it is second nature to use one control to change their position whilst simultaneously using another control to change the direction in which they are looking, however for those unfamiliar or inexperienced with such scenarios it is common to observe alternation between movement and looking, something that the OVW group has observed in people interacting with virtual content at various demonstrations using keyboard and mouse, Xbox controller and other control methodologies. For first person shooter (FPS) video games, this simultaneous independent control of head and body is commonly achieved by using keyboard buttons to control body movement while using a mouse to control looking direction, or by using the two separate control sticks of a controller such as an Xbox controller. With the seated VR scenario, the Xbox controller provides control over movement while the head tracker in the DK1 provides control over looking direction by tracking head orientation.
 
-Reluctance to changing head orientation when moving in the parallel reality scenario is most logically explained by participants feeling as though with the reduced visual acuity of their RW environment and the discrepancy in position and environmental objects of their VR environment that they needed to pay more conscious attention to their walking, lest they lose their footing. Upon reaching a location of particular interest and standing still, their willingness to perform larger head movements returns.
+Reluctance to changing head orientation when moving in the parallel reality scenario is most logically explained by participants feeling as though with the reduced visual acuity of their RW environment and the discrepancy in position and environmental objects of their VR environment that they needed to pay more conscious attention to their walking, lest they lose their footing. Upon reaching a location of particular interest and standing still, their willingness to perform larger head movements returns as they no longer have to contend with obstacle avoidance.
 
 \begin{figure}
 	\begin{center}
@@ -311,7 +311,7 @@ Reluctance to changing head orientation when moving in the parallel reality scen
 
 \subsubsection{Comparing RW and VR periods within parallel reality scenario}
 
-When comparing pitch and yaw data between the RW and VR periods within the parallel reality scenario, it is notable that for some participants there was more variance in the periods in which they were perceiving VR stimuli than in those in which they were perceiving RW stimuli, meaning that they turned their head more when looking at the VR environment than when looking at the RW environment. This is particularly evident when plotting these pitch and yaw data against time with the periods of RW/VR indicated. Figure \ref{1_pitch_yaw.png} shows the pitch and yaw data for participant 1 during the parallel reality scenario, who prominently displayed this tendency toward greater head movement while viewing VR than RW. The coloured background of the plot indicates which environment the participant was perceiving at that time index; blue for RW and green for VR. Correlation is evident between the most pronounced changes in yaw (red line) and the periods that the participant was observing VR stimuli (green background).
+When comparing pitch and yaw data between the RW and VR periods within the parallel reality scenario, it is notable that for some participants there was more variance in the periods in which they were perceiving VR stimuli than in those in which they were perceiving RW stimuli, meaning that they turned their heads more when looking at the VR environment than when looking at the RW environment. This is particularly evident when plotting these pitch and yaw data against time with the periods of RW/VR indicated. Figure \ref{1_pitch_yaw.png} shows the pitch and yaw data for participant 1 during the parallel reality scenario, who prominently displayed this tendency toward greater head movement while viewing VR than RW. The coloured background of the plot indicates which environment the participant was perceiving at that time index; blue for RW and green for VR. Correlation is evident between the most pronounced changes in yaw (red line) and the periods that the participant was observing VR stimuli (green background). As can be seen in figure \ref{3_pitch_yaw.png} this relationship is even more prevalent in the data from participant 3, while the data from participant 5 in figure \ref{5_pitch_yaw.png} still show the relationship but to a lesser extent.
 
 \begin{figure}[h]
 	\begin{center}
@@ -320,8 +320,6 @@ When comparing pitch and yaw data between the RW and VR periods within the paral
 	\label{1_pitch_yaw.png}
 	\end{center}
 \end{figure}
-
-As can be seen in figure \ref{3_pitch_yaw.png} this relationship is even more prevalent in the data from participant 3, while the data from participant 5 in figure \ref{5_pitch_yaw.png} still show the relationship but to a lesser extent.
 
 \begin{figure}[h]
 	\begin{center}
@@ -339,7 +337,7 @@ As can be seen in figure \ref{3_pitch_yaw.png} this relationship is even more pr
 	\end{center}
 \end{figure}
 
-Calculating the mean standard deviation in yaw for both RW and VR periods, weighted by the duration of the periods, shows this relationship more analytically. With reference to the figures in table \ref{sdyawtab} the mean standard deviation in yaw while perceiving VR stimuli is higher than while perceiving RW stimuli for participant 1 (39.887\textdegree\ compared to 25.545\textdegree) and even more so for participant 3 (60.636\textdegree\ compared to 11.702\textdegree). The values are closer for participant 5, due to the initial large delta in yaw just before the first transition into VR at around 130 seconds. Recalculating the weighted mean standard deviation from 150 seconds onwards to exclude this peak gives rise to the values of 36.074\textdegree\ for VR stimuli compared to 17.046\textdegree\ for RW stimuli, which is more in fitting with the impressions drawn from studying figure \ref{5_pitch_yaw.png}. The exception to this observation is participant 4, however this participant displayed very restricted head movement throughout both scenarios when compared to all of the other participants.
+Calculating the mean standard deviation in yaw for both RW and VR periods, weighted by the duration of the periods, shows this relationship more analytically. With reference to the figures in table \ref{sdyawtab} the mean standard deviation in yaw while perceiving VR stimuli is higher than while perceiving RW stimuli for participant 1 (39.887\textdegree\ compared to 25.545\textdegree) and even more so for participant 3 (60.636\textdegree\ compared to 11.702\textdegree). The values are closer for participant 5, due to the initial large delta in yaw just before the first transition into VR at around 130 seconds. Recalculating the weighted mean standard deviation from 150 seconds onwards to exclude this peak gives rise to the values of 36.074\textdegree\ for VR stimuli compared to 17.046\textdegree\ for RW stimuli, which is more in fitting with the impressions drawn from studying figure \ref{5_pitch_yaw.png}. The exception to this observation of correlation between head movement and environment is participant 4, however this participant displayed very restricted head movement throughout both scenarios when compared to all of the other participants.
 
 \begin{table}
 \begin{center}
@@ -401,23 +399,23 @@ Calculating the mean standard deviation in yaw for both RW and VR periods, weigh
 \end{center}
 \end{table}
 
-Also, when considering the amount of time spent perceiving each environment in the parallel reality scenario, several of the participants showed frequent transitioning behaviour, where they would perform many transitions and remain perceiving the visual stimuli from each environment for only a few seconds: for participants 1, 4 and 6, the mean times for both RW and VR periods are all between 1.68 and 3.4 seconds. Participant 3 spent longer perceiving each environment with a RW mean of 18.2 seconds and a VR mean of 7 seconds. The outlier is participant 5, with a RW mean of 31.8 seconds and a VR mean of 3.6 seconds; this was the participant who found it uncomfortable to walk while wearing the DK1, so a much longer amount of time spent perceiving RW stimuli is understandable.
+When considering the amount of time spent perceiving each environment in the parallel reality scenario, several of the participants showed frequent transitioning behaviour where they would perform many transitions and remain perceiving the visual stimuli from each environment for only a few seconds: for participants 1, 4 and 6, the mean times for both RW and VR periods are all between 1.68 and 3.4 seconds. Participant 3 spent longer perceiving each environment with a RW mean of 18.2 seconds and a VR mean of 7 seconds. The outlier is participant 5, with a RW mean of 31.8 seconds and a VR mean of 3.6 seconds; this was the participant who found it uncomfortable to walk while wearing the DK1, so a much longer amount of time spent perceiving RW stimuli is understandable.
 
-\subsubsection{Comparing VR periods of parallel reality scenario to VR section of traditional VR scenario}
+\subsubsection{Comparing VR periods of parallel reality scenario to VR section of seated VR scenario}
 
-Comparing yaw from the VR periods of the parallel reality scenario (table \ref{sdyawtab}) against yaw from the traditional VR scenario (table \ref{sdpitchyawtrad}) it can be seen that in most cases there is a noticeably less yaw change in the VR periods of the parallel reality scenario than in the traditional VR scenario, leading to the conclusion that participants felt more comfortable to perform larger head movements when seated with the DK1 than when standing/walking with the DK1. Observations of participants while they performed the traditional VR scenario support this conclusion with several participants twisting their heads right around to look behind them without changing their direction of their virtual `movement', while when walking in the parallel reality scenario they tended to largely look ahead and perform larger orientation changes by instead turning their whole body before walking in the return direction.
+Comparing yaw from the VR periods of the parallel reality scenario (table \ref{sdyawtab}) against yaw from the seated VR scenario (table \ref{sdpitchyawtrad}) it can be seen that in most cases there is noticeably less yaw change in the VR periods of the parallel reality scenario than in the seated VR scenario, indicating that participants felt more comfortable to perform larger head movements when seated with the DK1 than when standing/walking with it. Observations of participants while they performed the seated VR scenario support this conclusion with several participants twisting their heads right around to look behind them without changing their direction of their virtual `movement', while when walking in the parallel reality scenario participants tended to largely look ahead in the direction their body was facing, performing larger orientation changes by instead turning their whole body before walking in the return direction. As participants were restricted from reorienting their physical body during the VR section of the seated VR scenario (their chair did not swivel) this combined with participants dislike to turning their virtual body with the controller's stick explains why they might perform much larger head movements.
 
-Further comparing head movements between the VR section of the traditional VR scenario and the VR periods of the parallel reality scenario, the difference between the magnitude of pitch and yaw is greater in the VR section of the traditional VR scenario than in the VR periods of the parallel reality scenario. Comparing these values from tables \ref{sdpitchyawtrad}, \ref{sdpitchyawpr} and \ref{sdpitchyawtrad} this difference exhibits as smaller variance in yaw and roughly unchanged (only slightly increased) variance in pitch for the VR periods of the parallel reality scenario, further indicating that participants were more comfortable to look around themselves more freely in the traditional VR scenario than the parallel reality scenario, leading to less overall head movement in the parallel reality scenario than the traditional VR scenario.
+Further comparing head movements between the VR section of the seated VR scenario and the VR periods of the parallel reality scenario, the difference between the magnitude of pitch and yaw is greater in the VR section of the seated VR scenario than in the VR periods of the parallel reality scenario. Comparing these values from tables \ref{sdpitchyawtrad}, \ref{sdpitchtab} and \ref{sdyawtab} this difference exhibits as smaller variance in yaw and roughly unchanged (only slightly increased) variance in pitch for the VR periods of the parallel reality scenario, further indicating that participants were more comfortable to look around themselves more freely in the seated VR scenario than in the parallel reality scenario, leading to less overall head movement in the parallel reality scenario than the seated VR scenario.
 
 %=========================================================================================================
 
 \section{Summary}
 
-This first stage of evaluation directly compared a traditional scenario in which VR has typically been used at cultural heritage sites with the new style of interaction afforded by the Mirrorshades platform, addressing both temporal and spatial separation between experience of the real and virtual environments. Through this evaluation the Mirrorshades platform has shown itself to be a rewarding new modality for experiencing VR content in a cultural heritage context, improving upon traditional techniques employed for the presentation of such content by allowing immediate comparison and contrast between corresponding vantage points in both the RW and VR environments, successfully addressing the problem of on-site comparison of real and virtual environments.
+The first stage of investigation directly compared a seated VR scenario in which VR content has already begun to be used at cultural heritage sites with the mobile style of interaction afforded by the Mirrorshades platform, addressing both temporal and spatial separation between experience of the real and virtual environments. The Mirrorshades platform has shown itself to be a rewarding new modality for experiencing VR content in a cultural heritage context, improving upon seated VR techniques employable for the presentation of the same content by allowing immediate comparison and contrast between corresponding vantage points in both the RW and VR environments, successfully addressing the hindrance of on-site comparison of real and virtual environments.
 
-Through questionnaire data and interview transcripts participants reported that they found the parallel reality scenario to be both more enjoyable and more rewarding than the traditional VR scenario, despite the decreased usability and comfort effected by the requirement to don and carry a satchel of hardware and hold devices in both hands. The parallel reality scenario was reported as allowing easier comparison and contrast between RW and VR environments, leading participants to recognise more differences between the two environments and leading to a greater change in and better understanding of the chapel than with the traditional VR scenario. The visual acuity afforded by the cameras and both the accuracy and lag of the IPS surfaced as the major detractors to the experience of the parallel reality scenario.
+Through questionnaire data and interview transcripts participants reported that overall they found the parallel reality scenario to be both more enjoyable and more rewarding than the seated VR scenario, despite the decreased usability and comfort effected by the requirement to don and carry a satchel of hardware and hold devices in both hands. The parallel reality scenario was reported as allowing easier comparison and contrast between RW and VR environments, leading participants to recognise more differences between the two environments and leading to a greater change in and better understanding of the chapel than with the seated VR scenario. The visual acuity afforded by the cameras and both the accuracy and lag of the IPS surfaced as the major detractors to the experience of the parallel reality scenario.
 
-From the log data, participants displayed restricted head movement throughout the parallel reality scenario, looking to their sides and above and beneath themselves less when experiencing the VR chapel in the parallel reality scenario than when experiencing the VR chapel in the traditional VR scenario. While this restriction does not appear to have been so great that it reduced the utility and enjoyability of the parallel reality scenario to beneath that of the traditional VR scenario, it has been observed by other researchers~\cite{Slater1998} that there is a significant positive association between reported sense of presence in a VR environment and the amount of body movement, particularly head yaw, displayed by a participant, so reducing the negative impact that a parallel reality system has upon a user's willingness to freely look around them will likely result in beneficial returns, especially when considering that restricted head movement may lead to overlooking interesting aspects of the parallel environments.
+Log data show participants displaying restricted head movement throughout the parallel reality scenario, looking to their sides and above and beneath themselves less when experiencing the VR chapel in the parallel reality scenario than when experiencing the VR chapel in the seated VR scenario. While this restriction does not appear to have been so great that it reduced the utility and enjoyability of the parallel reality scenario to beneath that of the traditional VR scenario, it has been observed by prior investigations~\cite{Slater1998} that there is a significant positive association between reported sense of presence in a VR environment and the amount of body movement, particularly head yaw, displayed by a participant, so reducing the negative impact that a parallel reality system has upon a user's willingness to freely look around them will likely result in beneficial returns, especially when considering that restricted head movement may lead to overlooking interesting aspects of \textit{the both} parallel environments.
 
 %=========================================================================================================
 %=========================================================================================================
